tests/golden/kubernetes_1.33/prometheus/prometheus/10_prometheusOperator_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: syn-prometheus-operator
    app.kubernetes.io/part-of: syn
    app.kubernetes.io/version: 0.83.0
  name: syn-prometheus-operator
  namespace: syn-prometheus-operator
spec:
  clusterIP: None
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: syn-prometheus-operator
    app.kubernetes.io/part-of: kube-prometheus
