tests/golden/kubernetes_1.33/prometheus/prometheus/20_default-instance_prometheus_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: default-instance
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 3.4.0
  name: prometheus-default-instance
  namespace: syn-prometheus
spec:
  ports:
    - name: web
      port: 9090
      targetPort: web
    - name: reloader-web
      port: 8080
      targetPort: reloader-web
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: default-instance
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
  sessionAffinity: ClientIP
