tests/golden/kubernetes_1.33/prometheus/prometheus/90_default-instance_kubeStateMetrics_networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: kubestatemetrics-default-instance
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 2.15.0
  name: kubestatemetrics-default-instance
  namespace: syn-prometheus
spec:
  egress:
    - {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8443
          protocol: TCP
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: kubestatemetrics-default-instance
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
    - Egress
    - Ingress
